--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
     - docker build -t rmcaves/docker-react -f Dockerfile.dev .
 
     script:
-        - docker run -e CI=true rmcaves/docker-react npm run test
+        - docker run rmcaves/docker-react npm run test -- --coverage
